# flightcore-ng

./: Cargo.toml  README.md  flake.nix
flightcore-ng/: Cargo.toml
flightcore-ng-cli/: Cargo.toml
flightcore-ng-cli/src/: main.rs
flightcore-ng-core/: Cargo.toml
flightcore-ng-core/src/: launch.rs  lib.rs
flightcore-ng-core/src/dev/: fetch_releases.rs  fetch_revs.rs  install_northstar.rs  mod.rs
flightcore-ng-core/src/dev/wine/: mod.rs  wine_install.rs  wine_run.rs
flightcore-ng-core/src/settings/: mod.rs
flightcore-ng-core/src/setup/: mod.rs  northstar.rs
flightcore-ng/src/: main.rs
