[package]
name = "flightcore-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
json5 = "1.3.1"
libthermite = "0.9.0"
reqwest = "0.13.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_toml = "0.0.1"
steamlocate = "2.0.1"
zip = "8.1.0"
