[workspace]
resolver = "3"

members = ["flightcore-ng", "flightcore-ng-cli",
  "flightcore-ng-core"
]

[workspace.dependencies]
json5 = "1.3.1"
reqwest = { version = "0.13.2", default-features = false, features = [ "rustls", "charset", "http2" ] }
semver = { version = "1.0.27", features = [ "serde" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_toml = "0.0.1"
steamlocate = "2.0.1"
zip = "8.1.0"
tracing = "0.1.44"
eyre = { version = "0.6", default-features = false, features = [ "track-caller"] }
color-eyre = { version = "0.6" }
tokio = { version = "1.51.1", features = ["fs", "macros", "rt-multi-thread", "tracing", "process", "io-util", "io-std" ] }
rustls = { version = "0.23.37", default-features = false, features = [ "aws-lc-rs" ] }
tracing-subscriber = "0.3.23"
open = "5.3.3"

flightcore-ng-core = { path = "flightcore-ng-core" }
