[package]
name = "flightcore-ng-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
json5 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toml = { workspace = true }
steamlocate = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
tracing-subscriber = { workspace = true }

flightcore-ng-core = { workspace = true }

clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
inquire = { version = "0.9.4", features = ["editor"] }
