[package]
name = "flightcore-ng-core"
version = "0.1.0"
edition = "2024"

[dependencies]
json5 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toml = { workspace = true }
steamlocate = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
open = { workspace = true }

nix-compat = { git = "https://git.snix.dev/snix/snix.git", default-features = false, features = [ "flakeref" ] }
octocrab = { version = "0.49.7", default-features = false, features = [ "default-client", "follow-redirect", "futures-util", "hyper-rustls", "hyper-timeout", "retry", "rustls", "jwt-aws-lc-rs", "timeout", "tracing" ]}
directories = "6.0.0"
flate2 = { version = "1.0.17", features = [ "zlib-rs" ], default-features = false }
tar = "0.4.45"
bytes = "1.11.1"
ron = "0.12.1"
async-walkdir = "2.1.0"
futures-lite = "2.6.1"
pelite = "0.10.0"

