[package]
name = "flightcore-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
json5 = { workspace = true }
libthermite = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toml = { workspace = true }
steamlocate = { workspace = true }
zip = { workspace = true }
